--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "site-lisp/use-package"]
 	path = site-lisp/use-package
 	url = https://github.com/jwiegley/use-package.git
+[submodule "site-lisp/ox-twbs"]
+	path = site-lisp/ox-twbs
+	url = https://github.com/marsmining/ox-twbs.git
