--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "site-lisp/ox-twbs"]
 	path = site-lisp/ox-twbs
 	url = https://github.com/marsmining/ox-twbs.git
+[submodule "site-lisp/jedi-starter"]
+	path = site-lisp/jedi-starter
+	url = https://github.com/Jawabiscuit/jedi-starter.git
