Install emacs-ipython-notebook

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "site-lisp/jedi-starter"]
 	path = site-lisp/jedi-starter
 	url = https://github.com/Jawabiscuit/jedi-starter.git
+[submodule "site-lisp/emacs-ipython-notebook"]
+	path = site-lisp/emacs-ipython-notebook
+	url = https://github.com/millejoh/emacs-ipython-notebook.git
