--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "themes/monokai-emacs"]
 	path = themes/monokai-emacs
 	url = https://github.com/oneKelvinSmith/monokai-emacs.git
+[submodule "site-lisp/outline-magic"]
+	path = site-lisp/outline-magic
+	url = https://github.com/tj64/outline-magic.git
