--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "site-lisp/outline-magic"]
 	path = site-lisp/outline-magic
 	url = https://github.com/tj64/outline-magic.git
+[submodule "site-lisp/command-log-mode"]
+	path = site-lisp/command-log-mode
+	url = https://github.com/lewang/command-log-mode.git
