--- a/.gitmodules
+++ b/.gitmodules
@@ -37,3 +37,9 @@
 [submodule "site-lisp/yasnippet-snippets"]
 	path = site-lisp/yasnippet-snippets
 	url = https://github.com/AndreaCrotti/yasnippet-snippets.git
+[submodule "python/jedi"]
+	path = python/jedi
+	url = https://github.com/davidhalter/jedi.git
+[submodule "python/parso"]
+	path = python/parso
+	url = https://github.com/davidhalter/parso.git
