--- a/.gitmodules
+++ b/.gitmodules
@@ -1,43 +1,12 @@
-[submodule "site-lisp/use-package"]
-	path = site-lisp/use-package
-	url = https://github.com/jwiegley/use-package.git
+[submodule "python/jedi"]
+	path = python/jedi
+	url = https://github.com/davidhalter/jedi.git
         ignore = dirty
-[submodule "site-lisp/ox-twbs"]
-	path = site-lisp/ox-twbs
-	url = https://github.com/marsmining/ox-twbs.git
-        ignore = dirty
-[submodule "site-lisp/jedi-starter"]
-	path = site-lisp/jedi-starter
-	url = https://github.com/Jawabiscuit/jedi-starter.git
-        ignore = dirty
-[submodule "site-lisp/emacs-ipython-notebook"]
-	path = site-lisp/emacs-ipython-notebook
-	url = https://github.com/millejoh/emacs-ipython-notebook.git
-        ignore = dirty
-[submodule "themes/monokai-emacs"]
-	path = themes/monokai-emacs
-	url = https://github.com/oneKelvinSmith/monokai-emacs.git
-        ignore = dirty
-[submodule "site-lisp/outline-magic"]
-	path = site-lisp/outline-magic
-	url = https://github.com/tj64/outline-magic.git
-        ignore = dirty
-[submodule "site-lisp/command-log-mode"]
-	path = site-lisp/command-log-mode
-	url = https://github.com/lewang/command-log-mode.git
-        ignore = dirty
-[submodule "site-lisp/emacs-wgrep"]
-	path = site-lisp/emacs-wgrep
-	url = https://github.com/mhayashi1120/Emacs-wgrep.git
-        ignore = dirty
-[submodule "site-lisp/dired-details"]
-	path = site-lisp/dired-details
-	url = https://github.com/emacsmirror/dired-details.git
-        ignore = dirty
-[submodule "site-lisp/dired-details-plus"]
-	path = site-lisp/dired-details-plus
-	url = https://github.com/emacsmirror/dired-details-plus.git
+[submodule "python/parso"]
+	path = python/parso
+	url = https://github.com/davidhalter/parso.git
         ignore = dirty
 [submodule "site-lisp/yasnippet-snippets"]
 	path = site-lisp/yasnippet-snippets
 	url = https://github.com/Jawabiscuit/yasnippet-snippets.git
+        ignore = dirty
